--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     height: 100vh;
-    weight: 100vw;
+    width: 100vw;
 }
 
 header {
@@ -57,7 +57,6 @@ img {
 
 .section-inicio {
     display: flex;
-    background-color: red;
     align-items: center;
     height: 100%;
 }
@@ -65,15 +64,20 @@ img {
 .inicio-left {
     display: flex;
     flex-direction: column;
-    background-color: blue;
     height: 100vh;
     width: 50vw;
     justify-content: center;
 }
 
+.position-text {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 10%;
+}
+
 .inicio-right {
     display: flex;
-    background-color: green;
     width: 50vw;
     height: 100vh;
     justify-content: center;
@@ -81,21 +85,19 @@ img {
 }
 
 .my-img {
-    background-color: yellow;
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .inicio-left h1 {
     font-size: 4.6rem;
-    width: 66rem;
     font-weight: 700;
     line-height: 1.3;
 }
 
 .inicio-left h3 {
     font-size: 3rem;
-    width: 39rem;
     font-weight: 700;
     color: transparent;
     -webkit-text-stroke: 0.7px var(--main-color);
@@ -103,9 +105,55 @@ img {
 
 .inicio-left p {
     font-size: 1.6rem;
-    margin: 2rem 0 4rem;
+    margin: 5% 0;
 }
 
 span {
     color: var(--main-color);
+}
+
+.btn-box {
+    display: flex;
+    gap: 2rem;
+}
+
+.btn {
+    padding: 10px;
+    background-color: transparent;
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
+    border-radius: 10px;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-weight: bold;
+}
+
+.footer-inicio {
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    width: 45%;
+    padding: 1rem;
+}
+
+.footer-inicio a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    justify-content: center;
+    line-height: 40px;
+    color: var(--main-color);
+    background-color: transparent;
+    border: 2px solid var(--main-color);
+    border-radius: 50%;
+    margin: 10px;
+}
+
+.footer-inicio a:hover {
+    background-color: var(--main-color);
+    color: white;
+    transition: 0.5s;
 }
