alteracao no css

--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 3rem 13rem;
-    background-color: var(--second-bg-color);
+    background-color: var(--bg-color);
+    border-bottom: 2px solid #c4d600;
 }
 
 nav {
@@ -117,19 +118,6 @@ span {
     gap: 2rem;
 }
 
-.btn {
-    padding: 10px;
-    background-color: transparent;
-    border: 2px solid var(--main-color);
-    color: var(--main-color);
-    border-radius: 10px;
-    width: 20%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    font-weight: bold;
-}
-
 .footer-inicio {
     position: fixed;
     bottom: 0;
@@ -139,21 +127,169 @@ span {
 }
 
 .footer-inicio a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    text-align: center;
+    position: relative;
+    display: inline-flex;
     justify-content: center;
-    line-height: 40px;
-    color: var(--main-color);
-    background-color: transparent;
-    border: 2px solid var(--main-color);
-    border-radius: 50%;
-    margin: 10px;
+    align-items: center;
+    width: 40px; /* Ajuste conforme necessário */
+    height: 40px; /* Ajuste conforme necessário */
+    background: var(--main-color);
+    border: .2rem solid var(--main-color);
+    border-radius: 50%; /* Para tornar o ícone circular */
+    font-size: 1.8rem;
+    font-weight: bold;
+    letter-spacing: .1rem;
+    color: var(--bg-color);
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+    margin-right: 10px; /* Espaçamento entre os ícones, ajuste conforme necessário */
+    text-decoration: none; /* Remover sublinhado padrão */
+    text-align: center; /* Alinhar o texto ao centro */
+    line-height: 40px; /* Alinhar o texto verticalmente */
 }
 
 .footer-inicio a:hover {
+    color: var(--main-color);
+}
+
+.footer-inicio a:nth-child(2) {
+    background: transparent;
+    color: var(--main-color);
+}
+
+.footer-inicio a:nth-child(2)::before {
+    background: var(--main-color);
+}
+
+.footer-inicio a:nth-child(2):hover {
+    color: var(--bg-color);
+}
+
+.footer-inicio a::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: -1;
+    transition: .5s;
+}
+
+.footer-inicio a:hover::before {
+    width: 100%;
+}
+
+.btn-linkedin {
     background-color: var(--main-color);
     color: white;
-    transition: 0.5s;
+}
+
+.btn {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 15rem;
+    height: 100%;
+    background: var(--main-color);
+    border: .2rem solid var(--main-color);
+    border-radius: 4rem;
+    font-size: 1.8rem;
+    font-weight: bold;
+    letter-spacing: .1rem;
+    color: var(--bg-color);
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.btn-linkedin:hover {
+    color: var(--main-color);
+}
+
+.btn-linkedin:nth-child(2) {
+    background: transparent;
+    color: var(--main-color);
+}
+
+.btn-linkedin:nth-child(2)::before {
+    background: var(--main-color);
+}
+
+.btn-linkedin:nth-child(2):hover {
+    color: var(--bg-color);
+}
+
+.btn-linkedin::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: -1;
+    transition: .5s;
+}
+
+.btn-linkedin:hover::before {
+    width: 100%;
+}
+
+.btn-github {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 15rem;
+    height: 100%;
+    background: var(--main-color);
+    border: .2rem solid var(--main-color);
+    border-radius: 4rem;
+    font-size: 1.8rem;
+    font-weight: bold;
+    letter-spacing: .1rem;
+    color: var(--bg-color);
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+    padding: 10px;
+}
+
+.btn-github:hover {
+    color: var(--main-color);
+}
+
+.btn-github:nth-child(2) {
+    background: transparent;
+    color: var(--main-color);
+}
+
+.btn-github:nth-child(2)::before {
+    background: var(--main-color);
+}
+
+.btn-github:nth-child(2):hover {
+    color: var(--bg-color);
+}
+
+.btn-github::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: -1;
+    transition: .5s;
+}
+
+.btn-github:hover::before {
+    width: 100%;
 }
