criacao da tela habilidades

--- a/style.css
+++ b/style.css
@@ -1,361 +1,620 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    scroll-behavior: smooth;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif;
 }
 
 :root {
-    --bg-color: #081b29;
-    --second-bg-color: #112e42;
-    --text-color: #ededed;
-    --main-color: #e6b812;
+  --bg-color: #081b29;
+  --second-bg-color: #112e42;
+  --text-color: #ededed;
+  --main-color: #e6b812;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    overflow-x: hidden;
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
+  overflow-x: hidden;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
 }
 
-
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 3rem 13rem;
-    background-color: var(--bg-color);
-    border-bottom: 2px solid #c4d600;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 13rem;
+  background-color: var(--bg-color);
+  border-bottom: 2px solid #c4d600;
 }
 
 nav {
-    display: flex;
-    align-items: center;
-    gap: 4rem;
-    font-size: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+  font-size: 2rem;
 }
 
 a {
-    color: var(--text-color);
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: 600;
+  color: var(--text-color);
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 #inicio {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 img {
-    width: 40%;
+  width: 40%;
 }
 
 .section-inicio {
-    display: flex;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .inicio-left {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 50vw;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 50vw;
+  justify-content: center;
 }
 
 .position-text {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    justify-content: center;
-    height: 100vh;
-    padding-left: 10%; 
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  height: 100vh;
+  padding-left: 10%;
 }
 
 .inicio-right {
-    display: flex;
-    width: 50vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  width: 50vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
 
 .my-img {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 .inicio-left h1 {
-    font-size: 4.6rem;
-    font-weight: 700;
-    line-height: 1.3;
+  font-size: 4.6rem;
+  font-weight: 700;
+  line-height: 1.3;
 }
 
 .inicio-left h3 {
-    font-size: 3rem;
-    font-weight: 700;
-    color: transparent;
-    -webkit-text-stroke: 0.7px var(--main-color);
+  font-size: 3rem;
+  font-weight: 700;
+  color: transparent;
+  -webkit-text-stroke: 0.7px var(--main-color);
 }
 
 .inicio-left p {
-    font-size: 1.6rem;
-    margin: 5% 0;
-    font-weight: bold;
+  font-size: 1.6rem;
+  margin: 5% 0;
+  font-weight: bold;
 }
 
 span {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 .btn-box {
-    display: flex;
-    gap: 2rem;
+  display: flex;
+  gap: 2rem;
 }
 
 .footer-inicio {
-    position: absolute; 
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 1rem;
-    padding-left: 10%;
-    padding-bottom: 5%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 1rem;
+  padding-left: 10%;
+  padding-bottom: 5%;
 }
 
 .footer-inicio a {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px; 
-    height: 40px;
-    background: var(--main-color);
-    border: .2rem solid var(--main-color);
-    border-radius: 50%; 
-    font-size: 1.8rem;
-    font-weight: bold;
-    letter-spacing: .1rem;
-    color: var(--bg-color);
-    z-index: 1;
-    overflow: hidden;
-    transition: .5s;
-    margin-right: 10px;
-    text-decoration: none;
-    text-align: center;
-    line-height: 40px;
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: var(--main-color);
+  border: 0.2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 1.8rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  color: var(--bg-color);
+  z-index: 1;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-right: 10px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 40px;
 }
 
 .footer-inicio a:hover {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 .footer-inicio a:nth-child(2) {
-    background: transparent;
-    color: var(--main-color);
+  background: transparent;
+  color: var(--main-color);
 }
 
 .footer-inicio a:nth-child(2)::before {
-    background: var(--main-color);
+  background: var(--main-color);
 }
 
 .footer-inicio a:nth-child(2):hover {
-    color: var(--bg-color);
+  color: var(--bg-color);
 }
 
 .footer-inicio a::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: var(--bg-color);
-    z-index: -1;
-    transition: .5s;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--bg-color);
+  z-index: -1;
+  transition: 0.5s;
 }
 
 .footer-inicio a:hover::before {
-    width: 100%;
+  width: 100%;
 }
 
 .btn-linkedin {
-    background-color: var(--main-color);
-    color: white;
+  background-color: var(--main-color);
+  color: white;
 }
 
 .btn {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 15rem;
-    height: 100%;
-    background: var(--main-color);
-    border: .2rem solid var(--main-color);
-    border-radius: 4rem;
-    font-size: 1.8rem;
-    font-weight: bold;
-    letter-spacing: .1rem;
-    color: var(--bg-color);
-    z-index: 1;
-    overflow: hidden;
-    transition: .5s;
-    padding: 10px;
-    cursor: pointer;
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  height: 100%;
+  background: var(--main-color);
+  border: 0.2rem solid var(--main-color);
+  border-radius: 4rem;
+  font-size: 1.8rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  color: var(--bg-color);
+  z-index: 1;
+  overflow: hidden;
+  transition: 0.5s;
+  padding: 10px;
+  cursor: pointer;
 }
 
 .btn-linkedin:hover {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 .btn-linkedin:nth-child(2) {
-    background: transparent;
-    color: var(--main-color);
+  background: transparent;
+  color: var(--main-color);
 }
 
 .btn-linkedin:nth-child(2)::before {
-    background: var(--main-color);
+  background: var(--main-color);
 }
 
 .btn-linkedin:nth-child(2):hover {
-    color: var(--bg-color);
+  color: var(--bg-color);
 }
 
 .btn-linkedin::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: var(--bg-color);
-    z-index: -1;
-    transition: .5s;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--bg-color);
+  z-index: -1;
+  transition: 0.5s;
 }
 
 .btn-linkedin:hover::before {
-    width: 100%;
+  width: 100%;
 }
 
 .btn-github {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 15rem;
-    height: 100%;
-    background: var(--main-color);
-    border: .2rem solid var(--main-color);
-    border-radius: 4rem;
-    font-size: 1.8rem;
-    font-weight: bold;
-    letter-spacing: .1rem;
-    color: var(--bg-color);
-    z-index: 1;
-    overflow: hidden;
-    transition: .5s;
-    padding: 10px;
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  height: 100%;
+  background: var(--main-color);
+  border: 0.2rem solid var(--main-color);
+  border-radius: 4rem;
+  font-size: 1.8rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  color: var(--bg-color);
+  z-index: 1;
+  overflow: hidden;
+  transition: 0.5s;
+  padding: 10px;
 }
 
 .btn-github:hover {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 .btn-github:nth-child(2) {
-    background: transparent;
-    color: var(--main-color);
+  background: transparent;
+  color: var(--main-color);
 }
 
 .btn-github:nth-child(2)::before {
-    background: var(--main-color);
+  background: var(--main-color);
 }
 
 .btn-github:nth-child(2):hover {
-    color: var(--bg-color);
+  color: var(--bg-color);
 }
 
 .btn-github::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: var(--bg-color);
-    z-index: -1;
-    transition: .5s;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--bg-color);
+  z-index: -1;
+  transition: 0.5s;
 }
 
 .btn-github:hover::before {
-    width: 100%;
+  width: 100%;
 }
 
 .section-sobre {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--second-bg-color);
-    padding: 6%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--second-bg-color);
+  padding: 6%;
 }
 
 .section-sobre h1 {
-    font-size: 5rem;
+  font-size: 5rem;
 }
 
 .section-sobre img {
-    width: 60%;
-    border-radius: 50%;
-    border: 0.2rem solid white;
+  width: 60%;
+  border-radius: 50%;
+  border: 0.2rem solid white;
 }
 
 .img-astronauta {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5%;
 }
 
 .section-sobre h3 {
-    font-size: 3rem;
-    margin-bottom: 5%;
+  font-size: 3rem;
+  margin-bottom: 5%;
 }
 
 .text-sobre {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 5%;
-    width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  width: 80%;
 }
 
 .text-sobre p {
-    font-size: 1.6rem;
-    margin-bottom: 3%;
+  font-size: 1.6rem;
+  margin-bottom: 3%;
 }
 
 #btn-mais {
-    width: 100%;
+  width: 100%;
+  margin-top: 20%;
 }
 
-.bt-box-sobre {
-    margin-bottom: 10%;
+.section-habilidades {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.skills {
+  min-height: auto;
+  padding-bottom: 7rem;
+  background: var(--second-bg-color);
+  padding-top: 7%;
+}
+
+.skills .skills-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5rem;
+}
+
+.skills-row .skills-column {
+  flex: 1 1 40rem;
+}
+
+.skills-column .title {
+  font-size: 2.5rem;
+  margin: 0 0 1.5rem;
+  text-align: center;
+}
+
+.skills-box .skills-content {
+  position: relative;
+  border: 0.2rem solid var(--main-color);
+  border-radius: 0.6rem;
+  padding: 0.5rem 1.5rem;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.skills-box .skills-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--bg-color);
+  z-index: -1;
+  transition: 0.5s;
+}
+
+.skills-box .skills-content:hover::before {
+  width: 100%;
+}
+
+.skills-content .progress {
+  padding: 1rem 0;
+}
+
+.skills-content .progress h3 {
+  font-size: 1.7rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.skills-content .progress h3 span {
+  color: var(--text-color);
+}
+
+.skills-content .progress .bar {
+  height: 2.5rem;
+  border-radius: 0.6rem;
+  border: 0.2rem solid var(--main-color);
+  padding: 0.5rem;
+  margin: 1rem 0;
+}
+
+.skills-content .progress .bar span {
+  display: block;
+  height: 100%;
+  border-radius: 0.3rem;
+  background-color: var(--main-color);
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(1) .bar span {
+  width: 100%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span {
+  width: 90%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
+  width: 79%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
+  width: 95%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(5) .bar span {
+  width: 55%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(6) .bar span {
+  width: 60%;
+}
+
+.about-skills {
+  display: flex;
+  margin: 10rem auto;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  min-height: auto;
+  padding-bottom: 7rem;
+  width: 80%;
+}
+
+.box-about-skills {
+  width: 50rem;
+  background: var(--bg-color);
+  text-align: center;
+  margin: 1.6rem 1.6rem;
+  border-radius: 6px;
+  cursor: pointer;
+  min-height: auto;
+  padding-bottom: 7rem;
+}
+
+.box-about-skills:hover {
+  border: 2px solid var(--main-color);
+  transform: scale(1.09);
+  transition: 0.4s ease-in-out;
+}
+
+.box-about-skills span {
+  text-align: center;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.6rem;
+  font-weight: 600;
+  margin: 2rem 0 4rem;
+  color: var(--main-color);
+}
+
+.box-about-skills p {
+  font-size: 1.6rem;
+  color: var(--text-color);
+  margin: 2rem 0rem 3rem;
+  padding: 1.3rem 2rem 1.2rem;
+}
+
+#html,
+#css,
+#javascript,
+#github,
+#node,
+#react {
+  font-size: 6rem;
+  color: #c50d07;
+  margin: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#css {
+  color: rgb(3, 58, 176);
+}
+
+#javascript {
+  color: rgb(254, 233, 48);
+}
+
+#github {
+  color: rgb(61, 75, 107);
+}
+
+#node {
+  color: rgb(24, 147, 36);
+}
+
+#react {
+  color: rgb(16, 83, 198);
+}
+
+.projects {
+  background: var(--second-bg-color);
+}
+
+.about-projects {
+  display: flex;
+  margin: 10rem 0 0rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  min-height: auto;
+  padding-bottom: 7rem;
+}
+
+.box-projects {
+  width: 50rem;
+  background: var(--bg-color);
+  text-align: center;
+  margin: 1.6rem 3rem;
+  border-radius: 6px;
+  cursor: pointer;
+  min-height: auto;
+  padding-bottom: 7rem;
+}
+
+.box-projects:hover {
+  border: 2px solid var(--main-color);
+  transform: scale(1.02);
+  transition: 0.4s ease-in-out;
+}
+
+.box-projects span {
+  text-align: center;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.6rem;
+  font-weight: 600;
+  margin: 2rem 0 4rem;
+  color: var(--main-color);
+}
+
+.box-projects p {
+  font-size: 1.6rem;
+  color: var(--text-color);
+  margin: 2rem 0rem 3rem;
+  padding: 1.3rem 2rem 1.2rem;
+}
+
+.box-projects img {
+  width: 48rem;
+}
+
+.box-projects .btn-box {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 6rem 0 1rem;
+}
+
+.heading {
+  font-size: 5rem;
+  text-align: center;
+}
+
+.title {
+  padding-top: 3%;
+  padding-bottom: 1%;
+}
+
+.skills-content {
+  width: 80%;
+  margin: 0 auto;
 }
