--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ a {
   font-weight: 600;
 }
 
+nav a:hover {
+  color: var(--main-color);
+  text-decoration: underline #c4d600;
+}
+
 #inicio {
   color: var(--main-color);
 }
@@ -629,6 +634,7 @@ span {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-top: 10rem;
 }
 
 .box-projetos {
@@ -680,4 +686,80 @@ span {
   justify-content: center;
   align-items: center;
   gap: 4rem;
+}
+
+.card-projeto:hover {
+  border: 2px solid var(--main-color);
+  transform: scale(1.04);
+  transition: 0.4s ease-in-out;
+}
+
+.section-contato {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.btn-ver-mais {
+  margin-bottom: 5rem;
+}
+
+.text-contato {
+  font-size: 5rem;
+  margin: 5rem 0;
+  padding-top: 5rem;
+}
+
+.box-contato {
+  background-color: var(--second-bg-color);
+  position: relative;
+  padding: 6rem;
+  border-radius: 4rem;
+  font-weight: 400;
+  width: 60%;
+  margin-bottom: 5rem;
+}
+
+input {
+  display: block;
+  background: #f9f9f9;
+  border: 0.1rem solid var(--main-color);
+  border-radius: 0.8rem;
+  height: 6rem;
+  width: 100%;
+  height: 7rem;
+  margin-bottom: 3rem;
+  outline: none;
+  padding-left: 2rem;
+}
+
+#text-grande {
+  height: 16rem;
+  justify-content: none;
+  align-items: none;
+}
+
+textarea {
+  display: block;
+  background: #F9F9F9;
+  border: 0.1rem solid var(--main-color);
+  border-radius: 0.8rem;
+  height: 28rem;
+  width: 100%;
+  margin-bottom: 4rem;
+  font-size: 1.9rem;
+  font-weight: 400;
+  outline: none;
+  padding-left: 2rem;
+  padding-top: 2rem;
+}
+
+.btn-enviar {
+  width: 100%;
+}
+
+.btn-enviar a {
+  width: 100%;
+  padding: 1rem;
 }
